# Freewill

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_tests.py
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: AnalyticsDashboard .tsx  AutonMetrics1.tsx  AutonomousInterface.tsx  BehaviorMetrics.tsx  Chat.tsx  DebugPanel.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  FineTuningPanel.tsx  LoadingSpinner.tsx  MainLayout.tsx  MemoryAnalytics.tsx  MemorySearchPanel.tsx  MemoryVisualization.tsx  MessageCard.tsx  MetricsBar.tsx  ModelControlPanel.tsx  ModelControls.tsx  SystemControls.tsx
client/src/context/: LoadingContext.tsx  ModelContext.tsx
client/src/hooks/: useAsyncAction.ts  useChat.ts  useLoading.ts
client/src/services/: api.ts  errorHandler.ts  logger.ts  websocket.ts
client/src/types/: index.ts
server/: analytics.db  memories.db  requirements.txt  setup.py
server/.cache/: cache.db
server/src/: app.py
server/src/api/: analytics_routes.py  decorators.py  memory_routes.py  metrics_routes.py  middleware.py  routes.py  schemas.py  system_routes.py  validators.py
server/src/config/: settings.py
server/src/core/: constants.py  exceptions.py
server/src/data/: memory_manager.py  search_index.py  token_processor.py
server/src/llm/: engine.py
server/src/services/: analytics.py  api.js  cache_service.py  websocket_server.py
server/tests/: conftest.py  test_api_routes.py  test_cache.py  test_llm_cache.py  test_llm_engine.py  test_memory_api.py  test_memory_system.py
(+11 files in other folders)
